--- a/project/myCrossing/src/index.html
+++ b/project/myCrossing/src/index.html
@@ -5,7 +5,7 @@
   <title>My Crossing</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Varela+Round">
 </head>
 <body>
